backend login, verify email, forget password

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,15 +22,20 @@
   },
   "homepage": "https://github.com/zasure69/king_of_melody#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.3.2"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "uuid": "^9.0.1"
   }
 }
