--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "howler": "^2.2.4",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
