--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,11 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "google-auth-library": "^9.10.0",
     "howler": "^2.2.4",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
