--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "howler": "^2.2.4",
     "mongoose": "^8.3.2",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
