--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.0",
     "howler": "^2.2.4",
     "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
