--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,5 +1,4 @@
 {
-    "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
-    ]
+    "builds": [{ "src": "./main.js", "use": "@vercel/node" }],
+    "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
