--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,4 +1,3 @@
 {
-    "builds": [{ "src": "./main.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/" }]
+    "rewrites": [{ "src": "/(.*)", "dest": "/src" }]
 }
