--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,3 +1,12 @@
 {
-    "rewrites": [{ "src": "/(.*)", "dest": "/src" }]
-}
+    "version":2,
+    "builds": [
+      { "src": "*.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+    ]
+  }
