--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,7 +1,7 @@
 {
     "version":2,
     "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
+      { "src": "main.js", "use": "@vercel/node" }
     ],
     "routes": [
         {
