--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,12 +1,12 @@
 {
     "version":2,
     "builds": [
-      { "src": "main.js", "use": "@vercel/node" }
+      { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
         {
           "src": "/(*)",
-          "dest": "/routes/index.js"
+          "dest": "/src/routes/index.js"
         }
     ]
   }
