--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,11 +1,11 @@
 {
     "version":2,
     "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
+      { "src": "src/main.js", "use": "@vercel/node" }
     ],
     "routes": [
         {
-          "src": "/(*)",
+          "src": "/",
           "dest": "/src/routes/index.js"
         }
     ]
