--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/backend/src/routes"}]
+    "rewrites": [{ "source": "/(.*)", "destination": "/backend/src/routes/index.js"}]
   }
