--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,3 +1,12 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/backend"}]
+    "version":2,
+    "builds": [
+      { "src": "./main.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "main.js"
+        }
+    ]
   }
