--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,3 +1,6 @@
 
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/backend/src" }] }
+{ 
+  "version": 2, 
+  "rewrites": [{ "source": "/(.*)", "destination": "/src" }] 
+}
 
