--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,6 +1,6 @@
 
 { 
   "version": 2, 
-  "rewrites": [{ "source": "/(.*)", "destination": "/src/index.js" }] 
+  "rewrites": [{ "source": "/(.*)", "destination": "/backend/src/index.js" }] 
 }
 
