--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 
 { 
   "version": 2, 
+  "build": [{"src": "/backend/src/index.js", "use": "vercel@node"}],
   "rewrites": [{ "source": "/(.*)", "destination": "/backend/src/index.js" }] 
 }
 
