--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 
 { 
   "version": 2, 
-  "build": [{"src": "/backend/src/index.js", "use": "vercel@node"}]
+  "build": [{"src": "/backend/src/index.js", "use": "vercel@node"}],
+  "routes": [
+    { "src": "/(.*)", "dest": "/backend/src/routes/index.js" }
+  ]
 }
 
 
