--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 
 { 
-  "version": 2, 
-  "rewrites": [{ "source": "/(.*)", "destination": "/backend/src/index.js" }] 
+  "rewrites": [{ "source": "/(.*)", "destination": "/backend/api" }] 
 }
 
 
