--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 { 
   "version": 2, 
-  "builds": [{"src": "/backend/api/*.js", "use": "@vercel/node"}],
-  "routes": [{"src": "/(.*)", "dest": "/backend/api" }]
+  "builds": [{"src": "/backend/src/index.js", "use": "@vercel/node"}],
+  "routes": [{"src": "/(.*)", "dest": "/backend/src/index.js" }]
 } 
 
 
