--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 { 
   "version": 2, 
-  "builds": [{"src": "backend/src/index.js", "use": "@vercel/node"}],
+  "builds": [{"src": "backend/src/index.js", "use": "@now/node"}],
   "routes": [{"src": "/(.*)", "dest": "backend/src/index.js" }]
 } 
 
