--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
-{ 
-  "version": 2, 
-  "builds": [{"src": "backend/src/index.js", "use": "@now/node"}],
-  "routes": [{"src": "/(.*)", "dest": "backend/src/index.js" }]
-} 
-
+{
+  "version": 2,
+  "builds": [
+    { "src": "backend/src/index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.)", "dest": "backend/src/index.js" }
+  ],
+  "includeFiles": {
+    "backend/**/": "backend"
+  }
+}
 
