--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     { "src": "/(.)", "dest": "backend/src/index.js" }
   ],
   "files": {
-    "backend/**/*": "backend"
+    "backend/**/*", "backend/src/index.js"
   }
 }
 
