--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
   "routes": [
     { "src": "/(.)", "dest": "backend/src/index.js" }
   ],
-  "includes": [
-    "backend/src/**/*", "backend/src/index.js"
+  "src": [
+    "backend/src/**/*.js"
   ]
 }
 
