--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "backend/src/index.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.)", "dest": "backend/src/index.js" }
-  ],
-  "src": [
-    "backend/src/**/*.js"
-  ]
+  "buildCommand": "node backend/src/index.js"
 }
 
