--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "“King of melody” là một website giải trí dưới hình thức giải câu đố về âm nhạc được thiết kế bởi Nhóm 11 thuộc lớp NT208.O23.ANTT. Web được tạo ra xuất phát từ yêu cầu giải trí, thư giãn của con người và lấy nguồn cảm hứng từ chủ đề âm nhạc. Chi tiết về tổng quan và chức năng của trang web như sau:<br><br>\r ![image](https://github.com/zasure69/king_of_melody/assets/162142037/aa063fae-9784-4b89-a899-21c94d77d4a6)",
   "main": "src/main.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
