--- a/package.json
+++ b/package.json
@@ -22,30 +22,28 @@
   },
   "homepage": "https://github.com/zasure69/king_of_melody#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.10.0",
     "howler": "^2.2.4",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "readable-stream": "^4.5.2",
-    "socket.io": "^4.7.5"
-  },
-  "devDependencies": {
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "readable-stream": "^4.5.2",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
